Compiler construction/latte/src/Bnfc/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Bnfc/Par.y
-----------------------------------------------------------------------------

state 74 contains 1 shift/reduce conflicts.
state 140 contains 1 shift/reduce conflicts.

rule 45 is unused
rule 46 is unused
rule 47 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> 'class' Ident '{' ListClsDefItem '}'     (5)
	TopDef -> Type Ident '(' ListArg ')' Block         (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	ListClsDefItem ->                                  (9)
	ListClsDefItem -> ClsDefItem ListClsDefItem        (10)
	ClsDefItem -> Type Ident ';'                       (11)
	Arg -> Type Ident                                  (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> Stmt ListStmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> Type ListItem ';'                          (21)
	Stmt -> LValue '=' Expr ';'                        (22)
	Stmt -> LValue '++' ';'                            (23)
	Stmt -> LValue '--' ';'                            (24)
	Stmt -> 'return' Expr ';'                          (25)
	Stmt -> 'return' ';'                               (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> 'while' '(' Expr ')' Stmt                  (29)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (30)
	Stmt -> Expr ';'                                   (31)
	Item -> Ident                                      (32)
	Item -> Ident '=' Expr                             (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	LValue -> Ident                                    (36)
	LValue -> LValue '[' Expr ']'                      (37)
	LValue -> LValue '.' Ident                         (38)
	Type -> 'int'                                      (39)
	Type -> 'string'                                   (40)
	Type -> 'boolean'                                  (41)
	Type -> 'void'                                     (42)
	Type -> Ident                                      (43)
	Type -> Type '[]'                                  (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	Expr7 -> 'new' Ident                               (48)
	Expr7 -> 'new' Type '[' Expr ']'                   (49)
	Expr7 -> LValue                                    (50)
	Expr7 -> '(' Ident ')' 'null'                      (51)
	Expr7 -> '(' Expr ')'                              (52)
	Expr6 -> Integer                                   (53)
	Expr6 -> 'true'                                    (54)
	Expr6 -> 'false'                                   (55)
	Expr6 -> Ident '(' ListExpr ')'                    (56)
	Expr6 -> String                                    (57)
	Expr6 -> Expr7                                     (58)
	Expr5 -> '-' Expr6                                 (59)
	Expr5 -> '!' Expr6                                 (60)
	Expr5 -> Expr6                                     (61)
	Expr4 -> Expr4 MulOp Expr5                         (62)
	Expr4 -> Expr5                                     (63)
	Expr3 -> Expr3 AddOp Expr4                         (64)
	Expr3 -> Expr4                                     (65)
	Expr2 -> Expr2 RelOp Expr3                         (66)
	Expr2 -> Expr3                                     (67)
	Expr1 -> Expr2 '&&' Expr1                          (68)
	Expr1 -> Expr2                                     (69)
	Expr -> Expr1 '||' Expr                            (70)
	Expr -> Expr1                                      (71)
	ListExpr ->                                        (72)
	ListExpr -> Expr                                   (73)
	ListExpr -> Expr ',' ListExpr                      (74)
	AddOp -> '+'                                       (75)
	AddOp -> '-'                                       (76)
	MulOp -> '*'                                       (77)
	MulOp -> '/'                                       (78)
	MulOp -> '%'                                       (79)
	RelOp -> '<'                                       (80)
	RelOp -> '<='                                      (81)
	RelOp -> '>'                                       (82)
	RelOp -> '>='                                      (83)
	RelOp -> '=='                                      (84)
	RelOp -> '!='                                      (85)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'new'          { PT _ (TS _ 33) }
	'null'         { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	ListClsDefItem  rules 9, 10
	ClsDefItem      rule  11
	Arg             rule  12
	ListArg         rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	Item            rules 32, 33
	ListItem        rules 34, 35
	LValue          rules 36, 37, 38
	Type            rules 39, 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	Expr7           rules 48, 49, 50, 51, 52
	Expr6           rules 53, 54, 55, 56, 57, 58
	Expr5           rules 59, 60, 61
	Expr4           rules 62, 63
	Expr3           rules 64, 65
	Expr2           rules 66, 67
	Expr1           rules 68, 69
	Expr            rules 70, 71
	ListExpr        rules 72, 73, 74
	AddOp           rules 75, 76
	MulOp           rules 77, 78, 79
	RelOp           rules 80, 81, 82, 83, 84, 85

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 43)

	'[]'           reduce using rule 43
	L_Ident        reduce using rule 43


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 7

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 16
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 6)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 41)

	'['            reduce using rule 41
	'[]'           reduce using rule 41
	L_Ident        reduce using rule 41


State 9

	TopDef -> 'class' . Ident '{' ListClsDefItem '}'    (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 39)

	'['            reduce using rule 39
	'[]'           reduce using rule 39
	L_Ident        reduce using rule 39


State 11

	Type -> 'string' .                                  (rule 40)

	'['            reduce using rule 40
	'[]'           reduce using rule 40
	L_Ident        reduce using rule 40


State 12

	Type -> 'void' .                                    (rule 42)

	'['            reduce using rule 42
	'[]'           reduce using rule 42
	L_Ident        reduce using rule 42


State 13

	TopDef -> 'class' Ident . '{' ListClsDefItem '}'    (rule 5)

	'{'            shift, and enter state 18


State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 6)

	'('            shift, and enter state 17


State 15

	Type -> Type '[]' .                                 (rule 44)

	'['            reduce using rule 44
	'[]'           reduce using rule 44
	L_Ident        reduce using rule 44


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 17

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 6)

	')'            reduce using rule 13
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 22
	ListArg        goto state 23
	Type           goto state 24

State 18

	TopDef -> 'class' Ident '{' . ListClsDefItem '}'    (rule 5)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 9
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	ListClsDefItem goto state 19
	ClsDefItem     goto state 20
	Type           goto state 21

State 19

	TopDef -> 'class' Ident '{' ListClsDefItem . '}'    (rule 5)

	'}'            shift, and enter state 30


State 20

	ListClsDefItem -> ClsDefItem . ListClsDefItem       (rule 10)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 9
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	ListClsDefItem goto state 29
	ClsDefItem     goto state 20
	Type           goto state 21

State 21

	ClsDefItem -> Type . Ident ';'                      (rule 11)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 28

State 22

	ListArg -> Arg .                                    (rule 14)
	ListArg -> Arg . ',' ListArg                        (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 27


State 23

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 6)

	')'            shift, and enter state 26


State 24

	Arg -> Type . Ident                                 (rule 12)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 25

State 25

	Arg -> Type Ident .                                 (rule 12)

	')'            reduce using rule 12
	','            reduce using rule 12


State 26

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 6)

	'{'            shift, and enter state 34

	Block          goto state 33

State 27

	ListArg -> Arg ',' . ListArg                        (rule 15)

	')'            reduce using rule 13
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 22
	ListArg        goto state 32
	Type           goto state 24

State 28

	ClsDefItem -> Type Ident . ';'                      (rule 11)

	';'            shift, and enter state 31


State 29

	ListClsDefItem -> ClsDefItem ListClsDefItem .       (rule 10)

	'}'            reduce using rule 10


State 30

	TopDef -> 'class' Ident '{' ListClsDefItem '}' .    (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 31

	ClsDefItem -> Type Ident ';' .                      (rule 11)

	'boolean'      reduce using rule 11
	'int'          reduce using rule 11
	'string'       reduce using rule 11
	'void'         reduce using rule 11
	'}'            reduce using rule 11
	L_Ident        reduce using rule 11


State 32

	ListArg -> Arg ',' ListArg .                        (rule 15)

	')'            reduce using rule 15


State 33

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 34

	Block -> '{' . ListStmt '}'                         (rule 16)
